v1.1.0/modules/schema/pages/class/OpenCircuitTest.adoc
= `OpenCircuitTest`
:toclevels: 4


+++Open-circuit test results verify winding turn ratios and phase shifts. They include induced voltage and phase shift measurements on open-circuit windings, with voltage applied to the energised end. For three-phase windings, the excitation can be a positive sequence (the default) or a zero sequence.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:OpenCircuitTest`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/TransformerTest.adoc[`TransformerTest`]
*** *`OpenCircuitTest`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<EnergisedEnd,`EnergisedEnd`>>
//| [[slots_table.EnergisedEnd]]<<EnergisedEnd,`EnergisedEnd`>>
| 1 +
xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Transformer end that current is applied to in this open-circuit test.+++
| _n/a_

| <<OpenEnd,`OpenEnd`>>
//| [[slots_table.OpenEnd]]<<OpenEnd,`OpenEnd`>>
| 1 +
xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]
| +++Transformer end measured for induced voltage and angle in this open-circuit test.+++
| _n/a_

| <<energisedEndStep,`energisedEndStep`>>
//| [[slots_table.energisedEndStep]]<<energisedEndStep,`energisedEndStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Tap step number for the energised end of the test pair.+++
| _n/a_

| <<energisedEndVoltage,`energisedEndVoltage`>>
//| [[slots_table.energisedEndVoltage]]<<energisedEndVoltage,`energisedEndVoltage`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Voltage applied to the winding (end) during test.+++
| _n/a_

| <<openEndStep,`openEndStep`>>
//| [[slots_table.openEndStep]]<<openEndStep,`openEndStep`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Tap step number for the open end of the test pair.+++
| _n/a_

| <<openEndVoltage,`openEndVoltage`>>
//| [[slots_table.openEndVoltage]]<<openEndVoltage,`openEndVoltage`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Voltage measured at the open-circuited end, with the energised end set to rated voltage and all other ends open.+++
| _n/a_

| <<phaseShift,`phaseShift`>>
//| [[slots_table.phaseShift]]<<phaseShift,`phaseShift`>>
| 0..1 +
xref::class/AngleDegrees.adoc[`AngleDegrees`]
| +++Phase shift measured at the open end with the energised end set to rated voltage and all other ends open.+++
| _n/a_

| <<basePower,`basePower`>>
//| [[slots_table.basePower]]<<basePower,`basePower`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Base power at which the tests are conducted, usually equal to the rateds of one of the involved transformer ends.+++
| xref::class/TransformerTest.adoc[`TransformerTest`]

| <<temperature,`temperature`>>
//| [[slots_table.temperature]]<<temperature,`temperature`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Temperature at which the test is conducted.+++
| xref::class/TransformerTest.adoc[`TransformerTest`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#basePower]
=== `basePower`
+++Base power at which the tests are conducted, usually equal to the rateds of one of the involved transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTest.basePower`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]

| Inherited from
| xref::class/TransformerTest.adoc[`TransformerTest`]


|===

////
[.text-left]
--
<<slots_table.basePower,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EnergisedEnd]
=== `EnergisedEnd`
+++Transformer end that current is applied to in this open-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.EnergisedEnd`
| Cardinality
| 1
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.EnergisedEnd,&#10548;>>
--
////


//[discrete]
[#energisedEndStep]
=== `energisedEndStep`
+++Tap step number for the energised end of the test pair.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.energisedEndStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.energisedEndStep,&#10548;>>
--
////


//[discrete]
[#energisedEndVoltage]
=== `energisedEndVoltage`
+++Voltage applied to the winding (end) during test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.energisedEndVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.energisedEndVoltage,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OpenEnd]
=== `OpenEnd`
+++Transformer end measured for induced voltage and angle in this open-circuit test.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.OpenEnd`
| Cardinality
| 1
| Type
| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`]


|===

////
[.text-left]
--
<<slots_table.OpenEnd,&#10548;>>
--
////


//[discrete]
[#openEndStep]
=== `openEndStep`
+++Tap step number for the open end of the test pair.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.openEndStep`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.openEndStep,&#10548;>>
--
////


//[discrete]
[#openEndVoltage]
=== `openEndVoltage`
+++Voltage measured at the open-circuited end, with the energised end set to rated voltage and all other ends open.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.openEndVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.openEndVoltage,&#10548;>>
--
////


//[discrete]
[#phaseShift]
=== `phaseShift`
+++Phase shift measured at the open end with the energised end set to rated voltage and all other ends open.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:OpenCircuitTest.phaseShift`
| Cardinality
| 0..1
| Type
| xref::class/AngleDegrees.adoc[`AngleDegrees`]


|===

////
[.text-left]
--
<<slots_table.phaseShift,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#temperature]
=== `temperature`
+++Temperature at which the test is conducted.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerTest.temperature`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]

| Inherited from
| xref::class/TransformerTest.adoc[`TransformerTest`]


|===

////
[.text-left]
--
<<slots_table.temperature,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TransformerEndInfo.adoc[`TransformerEndInfo`] | xref::class/TransformerEndInfo.adoc#OpenEndOpenCircuitTests[`OpenEndOpenCircuitTests`]


|===

